--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,8 @@
         "sourceType": "module"
     },
     "rules": {
-        "react/react-in-jsx-scope": "off"
+        "react/react-in-jsx-scope": "off",
+        "no-unused-vars": "off",
+        "@typescript-eslint/no-unused-vars": "warn"
     }
 }
