--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "@testing-library/jest-dom": "^5.17.0",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
+        "@tldraw/tldraw": "^1.29.2",
         "@types/jest": "^27.5.2",
         "@types/node": "^16.18.50",
         "@types/react": "^18.2.21",
@@ -18,7 +19,10 @@
         "recoil": "^0.7.7",
         "sass": "^1.67.0",
         "typescript": "^4.9.5",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "y-presence": "^0.2.3",
+        "y-websocket": "^1.5.0",
+        "yjs": "^13.6.8"
     },
     "scripts": {
         "start": "react-scripts start",
