--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     },
     "devDependencies": {
         "eslint-config-prettier": "^9.0.0",
+        "msw": "^1.3.1",
         "prettier": "^3.0.3"
     }
 }
