--- a/package.json
+++ b/package.json
@@ -1,60 +1,61 @@
 {
-  "name": "nemo",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@tldraw/tldraw": "^1.29.2",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.50",
-    "@types/react": "^18.2.21",
-    "@types/react-dom": "^18.2.7",
-    "axios": "^1.5.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-query": "^3.39.3",
-    "react-router-dom": "^6.16.0",
-    "react-scripts": "5.0.1",
-    "recoil": "^0.7.7",
-    "sass": "^1.67.0",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "y-presence": "^0.2.3",
-    "y-websocket": "^1.5.0",
-    "yjs": "^13.6.8"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "eslint-config-prettier": "^9.0.0",
-    "msw": "^1.3.1",
-    "prettier": "^3.0.3"
-  },
-  "msw": {
-    "workerDirectory": "public"
-  }
+    "name": "nemo",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@testing-library/jest-dom": "^5.17.0",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^13.5.0",
+        "@tldraw/tldraw": "^1.29.2",
+        "@types/jest": "^27.5.2",
+        "@types/node": "^16.18.50",
+        "@types/react": "^18.2.21",
+        "@types/react-dom": "^18.2.7",
+        "axios": "^1.5.1",
+        "html5-qrcode": "^2.3.8",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-query": "^3.39.3",
+        "react-router-dom": "^6.16.0",
+        "react-scripts": "5.0.1",
+        "recoil": "^0.7.7",
+        "sass": "^1.67.0",
+        "typescript": "^4.9.5",
+        "web-vitals": "^2.1.4",
+        "y-presence": "^0.2.3",
+        "y-websocket": "^1.5.0",
+        "yjs": "^13.6.8"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "eslint-config-prettier": "^9.0.0",
+        "msw": "^1.3.1",
+        "prettier": "^3.0.3"
+    },
+    "msw": {
+        "workerDirectory": "public"
+    }
 }
