--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tldraw/core": "^1.23.2",
     "@tldraw/tldraw": "^1.29.2",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.50",
