--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "yjs": "^13.6.8"
     },
     "scripts": {
+        "dev": "concurrently \"npm run start\" \"HOST=localhost PORT=1234 npx y-websocket\"",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
@@ -57,7 +58,8 @@
     "devDependencies": {
         "eslint-config-prettier": "^9.0.0",
         "msw": "^1.3.1",
-        "prettier": "^3.0.3"
+        "prettier": "^3.0.3",
+        "concurrently": "^8.2.0"
     },
     "msw": {
         "workerDirectory": "public"
