--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
         "yjs": "^13.6.8"
     },
     "scripts": {
-        "dev": "concurrently \"npm run start\" \"HOST=localhost PORT=1234 npx y-websocket\"",
+        "dev": "concurrently \"cross-env HOST=localhost PORT=1234 npx y-websocket\" \"react-scripts start\"",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
@@ -59,7 +59,8 @@
         "eslint-config-prettier": "^9.0.0",
         "msw": "^1.3.1",
         "prettier": "^3.0.3",
-        "concurrently": "^8.2.0"
+        "concurrently": "^8.2.0",
+        "cross-env": "^7.0.3"
     },
     "msw": {
         "workerDirectory": "public"
