--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -18,7 +18,7 @@ spec:
             - name: REACT_APP_API_URL
               value: https://k255e0ec5dd13a.user-app.krampoline.com
             - name: GENERATE_SOURCEMAP
-              value: false
+              value: "false"
             - name: REACT_APP_KAKAO_JS_KEY
               valueFrom:
                 secretKeyRef:
